--- a/netforms/idcard.tex
+++ b/netforms/idcard.tex
@@ -21,7 +21,7 @@
 	\node[rectangle] (card) at (0,0) {%
 		\begin{minipage}[t]{.2\textwidth}%
 			\centering%
-			\includegraphics[width=.9\textwidth]{image.png}
+			\includegraphics[width=.9\textwidth]{images/bakar.jpg}
 		\end{minipage}%
 		\hspace{.03\textwidth}%
 		\begin{minipage}[b]{.57\textwidth}%
