--- a/netforms/legacylogos.sty
+++ b/netforms/legacylogos.sty
@@ -15,7 +15,7 @@
 
 
 % Packages
-\RequirePackage{tumcommon/tumcolor}%
+\RequirePackage{tumcolor}%
 \RequirePackage{tikz}%
 \usetikzlibrary{calc}
 \usetikzlibrary{shadings}
