--- a/netforms/studentdefs.tex
+++ b/netforms/studentdefs.tex
@@ -7,27 +7,27 @@
 % Falls 'other' gewaehlt wird, kann als optionales Argument eine spezielle Art
 % von Abschlussarbeit angegeben werden, z.B. \type[Sklave]{other}. Andernfalls
 % wird 'Other' als Standardbeschreibung gesetzt.
-\type{bachelor}
+\type{master}
 
 % Informationen ueber den Studenten. Sollte selbsterklaerend sein.
 \anrede{Herr}
-\nachname{nachname}
-\vorname{vorname}
-\matrikel{matrikel}
+\nachname{Andguladze}
+\vorname{Bakar}
+\matrikel{03701897}
 \sunhalle{sunaccount}
-\semester{1}{SoSe\,2016}
-\studientelefon{}{tel}
-\heimattelefon{}{--}
-\studienadresse{strasse}{plz stadt}
-\heimatadresse[adresszusatz=,appartment=]{}{}
+\semester{7}{WiSe\,2020}
+\studientelefon{+49 15780438672}{}
+\heimattelefon{}{}
+\studienadresse{Haslangstrasse 34}{80689 Muenchen}
+\heimatadresse[adresszusatz=,appartment=]{Tiflis, Georgien}{}
 \mail{student@tum.de}
 
 % Informationen ueber die Arbeit. Sollte selbsterklaerend sein.
 \themensteller{\NEThead}
-\beginn{04}{2016}
-\endt{08}{2016}
-\betreuer{Stephan G\"unther, Maurice Leclaire}
-\title{English Title of My Thesis}{Englischer Titel Meiner Arbeit}
+\beginn{01}{2021}
+\endt{07}{2021}
+\betreuer{Simon Bauer, Benedikt Jaeger}
+\title{Efficient and Accurate Hop-by-Hop Capacity Estimation}{}
 \studiengang{Informatik}
 
 
