--- a/thesis/coverpage.tex
+++ b/thesis/coverpage.tex
@@ -9,8 +9,8 @@
 \author{Bakar Andguladze}
 \supervisor{\chairhead}
 %\advisor{Prof.~Dr.-Ing.~Georg~Carle}
-\advisor{Simon Bauer, Benedikt Jaeger}
-%\date{29.\ Juni 2016}
+\assistants{Simon Bauer\tlc{}~M.\,Sc.\tlc{} Benedikt~Jaeger\tlc{}~M.\,Sc.}
+\date{15.\ September 2021}
 
 \def\pagestapleheight{10mm}
 
@@ -41,7 +41,7 @@
 	}
 \end{minipage}%
 }%
-\fbox{%
+\fbox{
 \begin{minipage}[c][297mm][c]{210mm}
 	\centering
 	\begin{minipage}[c]{160mm}
@@ -49,11 +49,10 @@
 		\maketitle*%
 	\end{minipage}%
 \end{minipage}%
-}%
+}
 \makeatother
 
 \vspace*{\fill}
 
 \end{document}
-
 
