--- a/thesis/include/chapter2.tex
+++ b/thesis/include/chapter2.tex
@@ -6,6 +6,8 @@ Some intro text
 \subsection*{Capacity}
 Capacity is this and that and this and that
 
+\section{Active and Passive measurement methods}
+
 \section{TCP}
 
 \section{ICMP}
