--- a/thesis/include/chapter1.tex
+++ b/thesis/include/chapter1.tex
@@ -1,31 +1,21 @@
 \chapter{Introduction}
+This master thesis presents the capacity estimation method for hop-by-hop measurements. Our goal is to create and test a method of calculating the capacity (i.e. maximum transmission rate) in a given network path and locating the narrow link.
+We will test the developed tool in regard to various metrics, such as packet size, intrusion rate, cross-traffic and flow-interference and finally, analyze the test results in order to conclude whether our approach is actually capable of delivering accurate results efficiently. 
 
 \section{Motivation}
-This Master’s Thesis shall implement a capacity estimation method for Hop-by-Hop measurements. The intended
-field of application is, for instance, enhancing the performance of network, traffic analysis, network
-monitoring, etc. Our main motivation is to improve the ways of measuring the capacity of networks in the
-internet. As this would serve to enhance the quality of networks for which proper measurements of network
-capacity are required, in order to, for instance, diagnose potential problems in it.
-There are quite a few measurement tools available, such as, PPrate[1], Pathrate[2], Pathchar[2], etc. However
-the current State-of-the-Art methods have some significant flaws and limitations regarding our measurement
-goals, such as:
+As the Internet is becoming increasingly essential part of our day-to-day lives, it is ever more important for the Internet providers to enhance the quality of networks in order to create a better user experience. One of the means to achieve this goal is to have a better picture of the network they aim to improve. Therefore, we are going to create a tool that measures the capacity of the path between two hosts. The intended field of application is, for instance, enhancing the performance of network, traffic analysis, network monitoring, etc. 
 
-Active tools require considerable amount of probes and this might cause network overload[3] which
-might, for example, result in lost packets and/or quyeue delays[2].
-Passive tools analyze only ongoing traffic, therefore they’re dependent on the traffic they observe.
-Also they require TCP servers to respond. Although they’re widely used in practice and deliver reliable
-results, they’re not sufficient to deliver all the desired information, such as the location of the narrow
-link.
-Therefore our goal is to develop a new solution based on an active measurement technique that provides
-required features of both passive and active tools regarding our measurement objectives. We will try to implement
-the least possible intrusion without compromising accuracy. Also it will be able to find the first narrow
-link of the path by measuring the capacity of each hop in the network. This new solution will be tested and
-evaluated by comparing it to the results of existing capacity measurement tools, i.e. PPrate implementation
-by Patryk Brzoza[3], but in contrast to Brzoza’s passive approach our tool will be based on an active measurement
-methodology. Moreover Brzoza’s measurement tool was trying to find end-to-end capacity, while
-this thesis is concerned about measuring the capacity of each hop in the network and finding the narrow link.
-Hop-by-Hop measurements provide a better picture of a network and enables to take a closer look at potential
-issues. This thesis is supposed to answer the following research questions:
+There are quite a few capacity estimation methodologies and tools available, that will be discussed in chapters below. However, the current State-of-the-Art methods have some significant flaws and limitations regarding our measurement goals, such as  
+\begin{itemize}
+	\item High intrusion, which can lead to network overload,
+	\item Dependence on ongoing traffic, which can be unpredictable at times,
+	\item Inability to locate the narrow link on the path.
+\end{itemize}
+
+Therefore, our goal is to develop a new solution that tries to minimize the influence of these limitations in regard to our measurement objectives. We will try to implement the least possible intrusion without compromising the accuracy. Also our tool will be able to find the first narrow link of the path by measuring the capacity of each hop in the network. 
+
+This new solution will be tested and evaluated in comparison to the results of existing capacity measurement tools, i.e. PPrate implementation by Patryk Brzoza\cite{brzoza}, but in contrast to Brzoza’s passive approach our tool will be based on an active measurement methodology. Moreover Brzoza’s measurement tool was designed to estimate end-to-end capacity, while this thesis is concerned about measuring the capacity of each hop in the network and finding the narrow link, as hop-by-hop measurements provide a better picture of a network and enable to take a closer look at potential issues.
+
 
 
 \section{Research Questions}
@@ -43,10 +33,10 @@ This thesis is supposed to answer the following research questions:
 \end{itemize}
 
 \section{Outline}
-Outline - description of each chapter below
-\\Chapter 2 defines the necessary terminology for understanding this thesis. Capacity, TCP, ICMP, Raw sockets, etc. 
-\\Chapter 3 describes the related work 
-\\Chapter 4 describes our approach and the tool that we developed to implement it.
-\\Chapter 5 Describes the test setup
-\\Chapter 6 is about the evaluation of the tool in regard to our research questions. 
-\\Chapter 7 concludes our thesis and subsequently discusses the future work - what comes next
+This section introduces the structure of the thesis.
+\\Chapter 2 defines the necessary terminology for understanding this thesis. Namely, capacity, TCP, ICMP, Raw sockets, etc. 
+\\Chapter 3 describes the related work - what has been done in regard to capacity estimations and some drawbacks and limitations to the existing approaches
+\\Chapter 4 describes the approach and the tool that we have developed to implement it. 
+\\Chapter 5 reviews the test setup and test environment in which the experiments are conducted.
+\\Chapter 6 evaluates our approach based on several parameters. It reviews the different factors that might affect the measurements and to what extent. Namely, how packet length influences the measurement results, what is the optimal rate of intrusion in the network and whether the cross-traffic and the flow-interference cause higher inaccuracy. Based on how the proposed approach handles these challenges we can state whether it is reliable or not.
+\\Finally, chapter 7 concludes our thesis and subsequently discusses the future work - what can be done afterwards to further extend our methodology. 
