--- a/thesis/include/chapter1.tex
+++ b/thesis/include/chapter1.tex
@@ -14,7 +14,7 @@ There are quite a few capacity estimation methodologies and tools available, tha
 
 Therefore, our goal is to develop a new solution that tries to minimize the influence of these limitations in regard to our measurement objectives. We will try to implement the least possible intrusion without compromising the accuracy. Also our tool will be able to find the first narrow link of the path by measuring the capacity of each hop in the network. 
 
-This new solution will be tested and evaluated in comparison to the results of existing capacity measurement tools, i.e. PPrate implementation by Patryk Brzoza\cite{brzoza}, but in contrast to Brzoza’s passive approach our tool will be based on an active measurement methodology. Moreover Brzoza’s measurement tool was designed to estimate end-to-end capacity, while this thesis is concerned about measuring the capacity of each hop in the network and finding the narrow link, as hop-by-hop measurements provide a better picture of a network and enable to take a closer look at potential issues.
+This new solution will be tested and evaluated in comparison to the results of existing capacity measurement tools, i.e. PPrate implementation by Patryk Brzoza[x], but in contrast to Brzoza’s passive approach our tool will be based on an active measurement methodology. Moreover Brzoza’s measurement tool was designed to estimate end-to-end capacity, while this thesis is concerned about measuring the capacity of each hop in the network and finding the narrow link, as hop-by-hop measurements provide a better picture of a network and enable to take a closer look at potential issues.
 
 
 
