--- a/thesis/include/appendix.tex
+++ b/thesis/include/appendix.tex
@@ -1,3 +1,11 @@
 \chapter{Appendix}
+This chapter describes the source code repository and provides the information and  instructions of how to use, alter and/or improve the current version of the Hop-by-hop measurement framework. 
 
-foo
+\section{The Source Code Repository}
+
+\section{Setup}
+
+\section{Hardware Requirements}
+
+\section{Software Requirements}
+
