--- a/thesis/include/chapter3.tex
+++ b/thesis/include/chapter3.tex
@@ -1,9 +1,15 @@
 \chapter{Related Work}
 
+\section{Capacity Estimation}
+
 \section{Existing Approaches}
+Active vs Passive
+End-to-End vs Hop-by-hop
 
 \subsection*{Variable Packet Size Probing}
 
 \subsection*{Packet Pair/Train Probing}
+
+\section{Iperf}
 
 \section{Implementation of PPrate by Brzoza}
