--- a/thesis/include/chapter4.tex
+++ b/thesis/include/chapter4.tex
@@ -1,10 +1,16 @@
 \chapter{Implementation}
 
+\section{Analysis}
+
 \section{Approach}
 
 \section{Traffic Generation}
 
-\section{Estimation of Capacities}
+\section{Estimation of End-to-End Capacity}
 
+\section{Estimation of Capacities Hop-by-Hop}
 
+\subsection*{parameters(?)}
+
+\section{Locating the Narrow Link}
 
