--- a/thesis/include/chapter6.tex
+++ b/thesis/include/chapter6.tex
@@ -1,16 +1,15 @@
 \chapter{Evaluation}
 
-\section{Estimation Error}
-
-\section{Packet Loss}
-
-\section{Cross-Traffic}
+\section{Packet Size}
 
 \section{Intrusion}
 
+\section{Cross-Traffic}
+
+\section{Packet Loss}
+
 \section{ICMP Rate Limiting}
 
+\section{Estimation Error}
+
 \section{Data Replication}
-
-
-
