--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -176,7 +176,7 @@ Benedikt~J\"ager\tlc{}~M.\,Sc.}
 
 \cleardoublepage
 \printbibliography[heading=bibintoc]
-\input{include/bibliography}
+%\input{include/bibliography}
 
 %\cleardoublepage
 \clearpage
